--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driverClassName = oracle.jdbc.driver.OracleDriver
+#spring.datasource.url = jdbc:oracle:thin:@microcareacademydb_high?TNS_ADMIN=c:\\Users\\sh030348\\Downloads\\Wallet_MicrocareAcademyDB
 spring.datasource.url = jdbc:oracle:thin:@microcareacademydb_high?TNS_ADMIN=/Users/sh030348/Downloads/Wallet_MicrocareAcademyDB
 spring.datasource.username = ADMIN
 spring.datasource.password = Muzammil073#
-
-
+spring.datasource.maxActive=1
