--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
+		
+		<dependency>  
+<groupId>org.springframework.boot</groupId>  
+<artifactId>spring-boot-starter-thymeleaf</artifactId>  
+</dependency> 
+		
 	</dependencies>
 
 	<build>
