--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url = jdbc:oracle:thin:@microcareacademydb_high?TNS_ADMIN=/Use
 spring.datasource.username = ADMIN
 spring.datasource.password = Muzammil073#
 #spring.datasource.maxActive=1
+
+
+logging.level.com.microcare.secondspringbootmicrocare.AuthProvider=INFO
+logging.file=app.log
