--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,9 @@ spring.datasource.password = Syed0071####
 
 logging.level.com.microcare.secondspringbootmicrocare.AuthProvider=INFO
 logging.file=app.log
+logging.level.com.zaxxer.hikari.pool=DEBUG
+spring.datasource.hikari.max-lifetime=2000
+spring.datasource.hikari.connection-timeout=2000
+spring.datasource.hikari.validation-timeout=2000
+spring.datasource.hikari.maximum-pool-size=5
 
