--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.datasource.driverClassName = oracle.jdbc.driver.OracleDriver
 #spring.datasource.url = jdbc:oracle:thin:@microcareacademydb_high?TNS_ADMIN=c:\\Users\\sh030348\\Downloads\\Wallet_MicrocareAcademyDB
-spring.datasource.url = jdbc:oracle:thin:@microcareacademydb_high?TNS_ADMIN=/Users/sh030348/Downloads/Wallet_MicrocareAcademyDB
+#spring.datasource.url = jdbc:oracle:thin:@microcareacademydb_high?TNS_ADMIN=/Users/sh030348/Downloads/Wallet_MicrocareAcademyDB
+spring.datasource.url = jdbc:oracle:thin:@microcaredb3_high?TNS_ADMIN=/Users/sh030348/Desktop/microcare/Wallet_microcaredb3
 spring.datasource.username = ADMIN
-spring.datasource.password = Syed0071####
+spring.datasource.password = 
 #spring.datasource.maxActive=1
-
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
 
 logging.level.com.microcare.secondspringbootmicrocare.AuthProvider=INFO
 logging.file=app.log
